--- a/src/components/ProjectsOverview/ProjectsOverview.module.css
+++ b/src/components/ProjectsOverview/ProjectsOverview.module.css
@@ -190,6 +190,11 @@
   border-radius: var(--border-radius);
 }
 
+.logoBorder {
+  border: 1px solid var(--border-color);
+  background: var(--background-primary);
+}
+
 .logoPlaceholder {
   height: 64px;
   width: 64px;
